Fixed z-index issue with top-bar. Adjusted title position.

--- a/scss/homeslides.scss
+++ b/scss/homeslides.scss
@@ -6,6 +6,7 @@
     max-height: 400px;
     padding: 0;
     margin: 0;
+    z-index: 2;
 }
 
 .home-slides-wrapper {
@@ -42,7 +43,7 @@
 }
 
 .home-slide-content h1 {
-    margin-top: 15%;
+    margin-top: 100px;
     color: #FFF;
     text-shadow: 1px 1px 4px rgba(0,0,0,1);
 }
